--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,12 @@ include_directories(${OGRE_INCLUDE_DIRS})
 pkg_search_module(OIS REQUIRED OIS)
 message(STATUS "** OIS_VERSION ${OIS_VERSION}")
 include_directories(${OIS_INCLUDE_DIRS})
+message(STATUS "prout ${OIS_LIBRARIES}")
 
 add_executable(prout
     main.cc)
 
 target_link_libraries(prout
-    ${OIS_LiBRARIES}
+    ${OIS_LIBRARIES}
     ${OGRE_LIBRARIES})
 
