--- a/plugins.cfg
+++ b/plugins.cfg
@@ -5,8 +5,8 @@ PluginFolder=/usr/lib/x86_64-linux-gnu/OGRE-1.8.0
 
 # Define plugins
 Plugin=RenderSystem_GL
+Plugin=Plugin_OctreeSceneManager
 #Plugin=Plugin_CgProgramManager
 #Plugin=Plugin_ParticleFX
 #Plugin=Plugin_BSPSceneManager
-#Plugin=Plugin_OctreeSceneManager
 
