--- a/plugins.cfg
+++ b/plugins.cfg
@@ -1,6 +1,7 @@
 # Defines plugins to load
 
 # Define plugin folder
+PluginFolder=/usr/lib/OGRE
 PluginFolder=/usr/lib/x86_64-linux-gnu/OGRE-1.8.0
 
 # Define plugins
